--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -703,6 +703,7 @@ body {
     padding-top: 10px;
     background-color: none;
     padding-bottom: 5px;
+    margin-left: 15px;
 }
 
 #stack-text-min {
